Amazon Web Service added

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,7 +5,17 @@ spring:
     active: prod
 app:
   log-mode: true
-
+# AMAZON WEB SERVICES CONFIGURATIONS --------
+aws:
+  s3:
+    access-key: AKIA3CMCCOL5V7KWWJVN
+    secret-key: VKEfDETEE7whRfRBb2bnDoQejHwi8vP5a/fkU4/V
+    bucket-name: your-meal
+logging:
+  level:
+    software:
+      amazon:
+        awssdk: DEBUG
 ---
 spring:
   config:
