--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,6 +3,10 @@ spring:
     name: YourMeal
   profiles:
     active: prod
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 15MB
 app:
   log-mode: true
 # AMAZON WEB SERVICES CONFIGURATIONS --------
