--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,6 +7,10 @@ spring:
     multipart:
       max-file-size: 10MB
       max-request-size: 15MB
+  cache:
+    type: redis
+    redis:
+      time-to-live: 30m
 app:
   log-mode: true
 # AMAZON WEB SERVICES CONFIGURATIONS --------
