--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,10 +7,9 @@ spring:
     multipart:
       max-file-size: 10MB
       max-request-size: 15MB
-  cache:
-    type: redis
-    redis:
-      time-to-live: 30m
+  liquibase:
+    enabled: true
+    change-log: /db/changelog/db.changelog-master.yaml
 app:
   log-mode: true
 # AMAZON WEB SERVICES CONFIGURATIONS --------
